kubernetes/rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-bus
  labels:
    app: message-bus
spec:
  selector:
    matchLabels:
      app: message-bus
      tier: rabbitmq
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: message-bus
        tier: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
        - containerPort: 15672
