kubernetes/rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: message-bus
  labels:
    app: message-bus
spec:
  ports:
  - name: message-bus
    port: 5672
  - name: management
    port: 15672
  selector:
    app: message-bus
    tier: rabbitmq
  clusterIP: None
